fixing scrollbar css problem

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,5 +1,6 @@
 html, body {
     height: 100%;
+    scrollbar-gutter: stable;
     margin: 0;
 }
 
